@@ -268,6 +268,7 @@
           <version>${surefire.version}</version>
           <configuration>
             <argLine>
+              --add-opens java.base/java.lang=ALL-UNNAMED
               --illegal-access=permit
             </argLine>
             <threadCount>1</threadCount>
